syntax = "proto3";

package sun.board.product;

option java_multiple_files = true;
option java_package = "sun.board.product.grpc";
option java_outer_classname = "ProductProto";


service ProductService {
  // 단건 조회
  rpc GetProduct (GetProductRequest) returns (GetProductResponse);
}

message GetProductRequest {
  int64 product_id = 1;
  string color = 2;
  int64 size = 3;
}

message GetProductResponse {
  Product product = 1;
}

message Product {
  int64 id = 1;
  string name = 2;
  string description = 3;
  int64 price = 4;
  string category = 5;
  string color = 6;
  int64 size = 7;
  int64 stock = 8;
}

//message Option {
//  string color = 1;
//  int64 size = 2;
//  int64 stock = 3;
//}